revert the repo back to main

--- a/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb
@@ -2,6 +2,13 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "EHS1DmzV54av"
       },
@@ -15,7 +22,7 @@
         "id": "lBAlZ8yhUOIa"
       },
       "source": [
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.3.1/workflows/TotalSegmentator/Docs/images/endtoend.png\">"
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/images/endtoend.png\">"
       ]
     },
     {
@@ -62,7 +69,7 @@
         "* Docker images can be found @ https://hub.docker.com/repository/docker/imagingdatacommons/download_convert_inference_totalseg/tags\n",
         "* The link to dockerfile along with git commit hash used for building the docker image can be found in one of the layers called 'LABEL'\n",
         "\n",
-        "    <img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.3.1/workflows/TotalSegmentator/Docs/images/endtoend_docker.png\">\n",
+        "    <img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/images/endtoend_docker.png\">\n",
         "\n",
         "* We use a python package called Papermill, that can run the notebook with out having to convert it to python script. This allows us maintain one copy of code instead of two.\n",
         "* A sample papermill command is\n",
@@ -72,7 +79,7 @@
         "    * refer to https://papermill.readthedocs.io/en/latest/usage-execute.html#note-about-using-yaml on how to pass the yaml list\n",
         "\n",
         "    Instead of passing the yaml list as a string, a yaml file can also be passed, as we do for SB-CGC\n",
-        "    [an example can be found here](!https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.3.1/workflows/TotalSegmentator/Docs/sampleManifests/batch_1.yaml)\n",
+        "    [an example can be found here](!https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/sampleManifests/batch_1.yaml)\n",
         "    <pre>\n",
         "    papermill endToEndTotalSegmentatorNotebook.ipynb outputendToEndTotalSegmentatorNotebook.ipynb -f path_to_yamlListOfSeriesInstanceUIDs.yaml\n",
         "    </pre>\n"
@@ -347,7 +354,7 @@
         "  os.remove(f'map_to_binary.py')\n",
         "except OSError:\n",
         "  pass\n",
-        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.3.1/workflows/TotalSegmentator/resources/dicomseg_metadata_whole_slicerAsRef.json\n",
+        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/resources/dicomseg_metadata_whole_slicerAsRef.json\n",
         "!wget -q https://raw.githubusercontent.com/wasserth/TotalSegmentator/v2.0.5/totalsegmentator/map_to_binary.py\n",
         "import map_to_binary"
       ]
@@ -365,7 +372,7 @@
         "    dtype={\"SegmentedPropertyTypeModifierCodeSequence.CodeValue\": str},\n",
         ")\n",
         "totalsegmentator_radiomics_features_code_mapping_df = pd.read_csv(\n",
-        "    \"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.3.1/workflows/TotalSegmentator/resources/radiomicsFeaturesMaps.csv\",\n",
+        "    \"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/resources/radiomicsFeaturesMaps.csv\",\n",
         "    index_col=[0]\n",
         ")\n",
         "totalsegmentator_radiomics_features_code_mapping_df\n"
