--- a/workflows/TotalSegmentator/Notebooks/inferenceTotalSegmentatorNotebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/inferenceTotalSegmentatorNotebook.ipynb
@@ -6,7 +6,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/v1.3.1/workflows/TotalSegmentator/Notebooks/inferenceTotalSegmentatorNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/inferenceTotalSegmentatorNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +37,7 @@
         "id": "toVsdH7JIV8H"
       },
       "source": [
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.3.1/workflows/TotalSegmentator/Docs/images/inference.png\">"
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/images/inference.png\">"
       ]
     },
     {
@@ -88,7 +88,7 @@
         "*  Docker images can be found @ https://hub.docker.com/repository/docker/imagingdatacommons/inference_totalseg/tags\n",
         "*  The link to dockerfile along with git commit hash used for building the docker image can be found in one of the layers called 'LABEL'\n",
         "\n",
-        "    <img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.3.1/workflows/TotalSegmentator/Docs/images/inference_docker.png\">\n",
+        "    <img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/images/inference_docker.png\">\n",
         "\n",
         "* We use a python package called Papermill, that can run the notebook with out having to convert it to python script. This allows us maintain one copy of code instead of two.\n",
         "* A sample papermill command is\n",
